--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sweetalert": "^1.1.3",
     "urijs": "^1.17.0",
     "vue": "2.*",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1"
   }
 }
