--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "coconutcraig/laravel-postmark": "^2.2",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "~6.0",
         "laravel/cashier": "~7.0",
         "laravel/framework": "5.6.*",
         "laravel/spark-aurelius": "*@dev",
